fixing nav on mobile devices

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -290,6 +290,9 @@ header {
 
   #nav {
     text-align: right;
+    @media (max-width: 767px) {
+      font-size: $header-font-size / 2;
+    }
 
     a {
       display: inline-block;
